feat: Add end-to-end tests for Postgres and pgAdmin modules, including lifecycle management and resource verification

--- a/test/e2e/test-config.yaml
+++ b/test/e2e/test-config.yaml
@@ -26,3 +26,15 @@ modules:
     secrets:
       webdav_username: e2e-test
       webdav_password: e2e-test-password
+
+  - name: postgres
+    namespace: e2e-test-infra
+    secrets:
+      admin_postgres_user: e2e-admin
+      admin_postgres_password: e2e-test-password
+
+  - name: pgadmin
+    namespace: e2e-test-infra
+    secrets:
+      pgadmin_default_email: e2e-test@example.com
+      pgadmin_admin_password: e2e-test-password
